--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
         .animate-in { animation: fadeIn 0.3s ease-out forwards; }
         body { -webkit-tap-highlight-color: transparent; }
+        .scrollbar-hide::-webkit-scrollbar { display: none; }
     </style>
 </head>
 <body class="bg-slate-100 overflow-hidden">
@@ -172,9 +173,9 @@
                     const as = assignments[item.id] || {};
                     const totalW = Object.values(as).reduce((a,b)=>a+b, 0);
                     if (totalW === 0) return;
-                    Object.entries(as).forEach(([pId, w]) => {
-                        const share = (w/totalW)*item.price;
-                        const units = (w/totalW)*item.quantity;
+                    Object.entries(as).forEach(([pId, weight]) => {
+                        const share = (weight / totalW) * item.price;
+                        const units = (weight / totalW) * item.quantity;
                         pData[pId].base += share;
                         pData[pId].items.push({ name: item.name, share, units, totalQ: item.quantity });
                     });
@@ -215,7 +216,7 @@
                 });
 
                 people.forEach(p => pData[p.id].final = balances[p.id]);
-                return { sub, tAm, pAm, total: finalT, pData };
+                return { subtotalNeto: sub, taxAmount: tAm, tipAmount: pAm, total: finalT, pData };
             };
 
             const results = step === 'results' ? calculate() : null;
@@ -308,7 +309,7 @@
                                                         {w>0 && <div className={`absolute left-0 top-0 bottom-0 ${c.f} opacity-15 transition-all duration-500`} style={{ width: `${per}%` }}/>}
                                                         <span className="relative z-10 flex items-center gap-1"><span>{p.avatar}</span> {p.name}</span>
                                                     </button>
-                                                    {w>0 && <div className="flex items-center gap-1 shrink-0"><span className={`text-[10px] font-black min-w-[30px] ${c.t}`}>{per}%</span><button onClick={()=>setAssignments({...assignments, [item.id]: {...as, [p.id]: Math.max(0.5, w-0.5)}})} className="bg-slate-100 p-1 rounded-lg active:bg-slate-200"><Minus size={12}/></button><button onClick={()=>setAssignments({...assignments, [item.id]: {...as, [p.id]: w+0.5}})} className="bg-slate-100 p-1 rounded-lg active:bg-slate-200"><Plus size={12}/></button></div>}
+                                                    {w>0 && <div className="flex items-center gap-1 shrink-0"><span className={`text-[10px] font-black min-w-[30px] ${c.t}`}>{per}%</span><button onClick={()=>setAssignments({...assignments, [item.id]: {...as, [p.id]: Math.max(0.5, (w||0)-0.5)}})} className="bg-slate-100 p-1 rounded-lg active:bg-slate-200"><Minus size={12}/></button><button onClick={()=>setAssignments({...assignments, [item.id]: {...as, [p.id]: (w||0)+0.5}})} className="bg-slate-100 p-1 rounded-lg active:bg-slate-200"><Plus size={12}/></button></div>}
                                                 </div>
                                             );
                                         })}
@@ -327,8 +328,8 @@
                         <div className="flex justify-between items-baseline relative z-10"><span className="uppercase text-[10px] font-black text-indigo-300 tracking-widest">Total Factura</span><span className="text-3xl font-black">${results.total.toFixed(2)}</span></div>
                         <div className="text-xs text-indigo-200 border-t border-indigo-700/50 pt-3 space-y-1 relative z-10">
                             <div className="flex justify-between"><span>Base:</span><span>${results.subtotalNeto.toFixed(2)}</span></div>
-                            <div className="flex justify-between"><span>Impuesto ({tax}%):</span><span>${results.tAm.toFixed(2)} {pricesIncludeTax && "(Inc.)"}</span></div>
-                            <div className="flex justify-between font-black text-white"><span>Propina ({tip}%):</span><span>${results.pAm.toFixed(2)}</span></div>
+                            <div className="flex justify-between"><span>Impuesto ({tax}%):</span><span>${results.taxAmount.toFixed(2)} {pricesIncludeTax && "(Inc.)"}</span></div>
+                            <div className="flex justify-between font-black text-white"><span>Propina ({tip}%):</span><span>${results.tipAmount.toFixed(2)}</span></div>
                         </div>
                         <button onClick={()=>setShowFullBreakdown(true)} className="w-full py-2.5 bg-white/10 rounded-xl text-[10px] font-black uppercase tracking-widest border border-white/20 active:bg-white/20 relative z-10">Auditoría de Mesa</button>
                     </div>
@@ -406,9 +407,9 @@
                                         </div>;
                                     })}
                                     <div className="p-5 bg-indigo-600 text-white rounded-3xl space-y-1.5 shadow-lg">
-                                        <div className="flex justify-between text-[10px] font-black uppercase opacity-70"><span>Base Neta:</span><span>${results.sub.toFixed(2)}</span></div>
-                                        <div className="flex justify-between text-[10px] font-black uppercase opacity-70"><span>Impuesto Global:</span><span>${results.tAm.toFixed(2)}</span></div>
-                                        <div className="flex justify-between text-[10px] font-black uppercase opacity-70"><span>Propina Global:</span><span>${results.pAm.toFixed(2)}</span></div>
+                                        <div className="flex justify-between text-[10px] font-black uppercase opacity-70"><span>Base Neta:</span><span>${results.subtotalNeto.toFixed(2)}</span></div>
+                                        <div className="flex justify-between text-[10px] font-black uppercase opacity-70"><span>Impuesto Global:</span><span>${results.taxAmount.toFixed(2)}</span></div>
+                                        <div className="flex justify-between text-[10px] font-black uppercase opacity-70"><span>Propina Global:</span><span>${results.tipAmount.toFixed(2)}</span></div>
                                         <div className="flex justify-between font-black text-xl pt-2 border-t border-white/10 tracking-tighter uppercase"><span>Total Cuenta</span><span>${results.total.toFixed(2)}</span></div>
                                     </div>
                                 </div>
@@ -422,7 +423,7 @@
                                             return `  • ${p.name}: ${(w/tw*i.quantity).toFixed(1)} und. ($${(w/tw*i.price).toFixed(2)})`;
                                         }).join('\n') + '\n\n';
                                     });
-                                    t += `📊 *Desglose Final:*\n- Subtotal: $${results.sub.toFixed(2)}\n- Impuestos: $${results.tAm.toFixed(2)}\n- Propina: $${results.pAm.toFixed(2)}\n\n💰 *TOTAL MESA: $${results.total.toFixed(2)}*`;
+                                    t += `📊 *Desglose Final:*\n- Subtotal: $${results.subtotalNeto.toFixed(2)}\n- Impuestos: $${results.taxAmount.toFixed(2)}\n- Propina: $${results.tipAmount.toFixed(2)}\n\n💰 *TOTAL MESA: $${results.total.toFixed(2)}*`;
                                     copy(t);
                                 }} className={`w-full py-4 rounded-2xl font-black flex items-center justify-center gap-2 active:scale-95 transition-all ${copySuccess ? 'bg-green-600 text-white' : 'bg-slate-800 text-white shadow-lg'}`}>{copySuccess ? <Check size={18}/> : <Share2 size={18}/>} {copySuccess ? 'Copiado' : 'Compartir con el Grupo'}</button></div>
                             </div>
